manifests/-ingressroutes-deprecated/filebrowser-route.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: filebrowser
  # annotations:
  #   linkerd.io/inject: enabled

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: filebrowser
  namespace: filebrowser

spec:
  entryPoints:
    - web
    - websecure

  routes:
  - match: Host(`cloud.claytonc.dev`)
    kind: Rule
    services:
    - name: filebrowser
      port: 80
  tls:
    secretName: filebrowser-tls
