manifests/-ingressroutes-deprecated/grafana-route.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`grafana.claytonc.dev`)
      kind: Rule
      services:
      - name: grafana
        port: 80
  tls:
    secretName: grafana-tls
