manifests/-ingressroutes-deprecated/home-assistant-routes.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`home.claytonc.dev`)
      kind: Rule
     # middlewares:
      #  - name: whitelist
      services:
        - name: home-assistant
          port: 8123
  #    middlewares:
  #      - name: auth
  # Use the secret generated by cert-manager
  tls:
    secretName: homeassistant-tls


---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant-codeserver
  namespace: homeassistant
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`home-config.claytonc.dev`)
      kind: Rule
      services:
        - name: home-assistant-codeserver
          port: 12321
  tls:
    secretName: codeserver-tls
