manifests/-ingressroutes-deprecated/jellyfin-route.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: jellyfin
  # annotations:
  #   linkerd.io/inject: enabled

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: jellyfin

spec:
  entryPoints:
    - web
    - websecure

  routes:
  - match: Host(`jellyfin.claytonc.dev`)
    kind: Rule
    services:
    - name: jellyfin
      port: 8096
  tls:
    secretName: jellyfin-tls
