manifests/-ingressroutes-deprecated/portfolio-route.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: portfolio
  namespace: portfolio
  annotations:
    kubernetes.io/ingress.class: traefik-crd-external
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`portfolio.claytonc.dev`)
      kind: Rule
      services:
      - name: portfolio
        port: 80
  tls:
    secretName: portfolio-tls
