manifests/-ingressroutes-deprecated/prometheus-route.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`prometheus.claytonc.dev`)
      kind: Rule
      services:
      - name: prometheus-server
        port: 80
  tls:
    secretName: prometheus-tls
