manifests/-ingressroutes-deprecated/teleport-routes.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: teleport
  # annotations:
  #   linkerd.io/inject: enabled

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: teleport-k8s
  namespace: teleport
spec:
  entryPoints:
    - k8s-teleport
  routes:
    - match: HostSNI(`*`)d
      services:
      - name: teleport
        port: 3026

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: teleport-proxy
  namespace: teleport
spec:
  entryPoints:
    - proxy-teleport
  routes:
    - match: HostSNI(`*`)
      services:
      - name: teleport
        port: 3024

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: teleport-ssh
  namespace: teleport
spec:
  entryPoints:
    - ssh-teleport
  routes:
    - match: HostSNI(`*`)
      services:
      - name: teleport
        port: 3023

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: teleport
  namespace: teleport
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`sso.claytonc.dev`)
      kind: Rule
      services:
      - name: teleport
        port: 443
        scheme: https
        serversTransport: insecure-skip-verify
  tls:
    secretName: teleport-tls
