manifests/-ingressroutes-deprecated/traefik-route.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
  annotations:
    linkerd.io/inject: enabled

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`traefik.claytonc.dev`)
      kind: Rule
      middlewares:
        - name: local-whitelist
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: traefik-tls

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: local-whitelist
  namespace: traefik
spec:
  ipWhiteList:
    sourceRange:
      - 192.168.1.0/24
      - 10.244.0.0/16
